// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiUser should render a default multi-user avatar 1`] = `
<div
  class="avatar five"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render a facility avatar with aria hidden 1`] = `
<div
  class="avatar five"
>
  <span
    alt="multi-user"
    aria-hidden="true"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render a facility avatar with color variant one 1`] = `
<div
  class="avatar one"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render a multi user avatar with custom props 1`] = `
<div
  class="avatar five"
  id="custom props multi user"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render an avatar with an automated color variant, based on a hashValue 1`] = `
<div
  class="avatar two"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render an avatar with color variant neutral 1`] = `
<div
  class="avatar neutral"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;

exports[`MultiUser should render with a multi user with provided height and width 1`] = `
<div
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon multi-user"
    role="img"
  />
</div>
`;
